hopefully fixed overlay problem on mobile

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -64,7 +64,7 @@ header.masthead {
 }
 
 header.masthead > .overlay {
-    padding: 5rem 0;
+    padding: 6rem 0;
     text-align: center;
     background: rgba(0, 0, 0, 0.6);
 }
